--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,51 +1,22 @@
-<footer class="bg-black ph3 pv4 white">
-
-	<div class="mw7 center pt3">
-
-		<div class="measure-narrow center mb4">
-
-			<img src="/img/logo.svg" alt="Kaldi logo" class="db w4 center mb4 br0">
-			<p class="f3 lh-title light-gray b tc mb2">Newsletter subscribe</p>
-			<p>Get awesome news from us in your inbox every two weeks. Be the first to learn about new products.</p>
-
-			{{ partial "newsletter-form" . }}
-
-		</div>
-
-		<div class="flex-ns justify-between">
-
-			<div>
-				<h3 class="f4 b lh-title mb1 primary">Kaldi</h3>
-				<ul class="mb3">
-					<li><a href="/" class="link">Home</a></li>
-					<li><a href="/products" class="link">Our products</a></li>
-					<li><a href="/values" class="link">About</a></li>
-					<li><a href="/post" class="link">Blog</a></li>
-					<li><a href="/contact" class="link">Contact</a></li>
-				</ul>
+<footer class="bg-black ph1 pv2 white">
+	<div class="mw9 center pt3">
+		<div class="mw9 center ph3-ns">
+			<div class="cf ph2-ns">
+				<div class="fl w-100 w-50-ns pa2">
+					<h3 class="f4 fw1 b lh-title mb1 primary">Liên hệ</h3>
+					<ul class="mb3">
+						<li><span class="fw1">Địa chỉ:</span> 12 Tân Trào, P. Tân Phú, Quận 7, Tp. Hồ Chí Minh</li>
+						<li><span class="fw1">Sdt:</span> <span style="color: red">123456789</span></li>
+						<li><span class="fw1">Email:</span> thaobinh@email.com</li>
+						<li><span class="fw1">Website:</span> thaobinhland.vn</li>
+					</ul>
+				</div>
+				<div class="fl w-100 w-50-ns pa2">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1959.4698311001562!2d106.77774597964026!3d10.815929567275754!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1514061126352" width="100%" height="300px" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
 			</div>
-
-			<div>
-				<h3 class="f4 b lh-title mb1 primary">Find out more</h3>
-				<ul class="mb3">
-					<li><a href="/post/jamaica-blue/" class="link">Latest offers</a></li>
-					<li><a href="/contact" class="link">Schedule and appointment</a></li>
-				</ul>
-			</div>
-
-			<div>
-				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
-				<ul class="mhn2">
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-vimeo") }}
-				</ul>
-			</div>
-
 		</div>
 	</div>
-
 </footer>
 
 {{ partial "svg" . }}
