--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -2,26 +2,42 @@
 <html lang="en-US">
 	<head>
 
-		<title>{{ .Title }} | Kaldi</title>
+		<title>{{ .Title }} | Thao Binh Land</title>
 		<link rel="stylesheet" href="/css/main.css"/>
+		<link rel="stylesheet" href="/css/flickity.min.css"/>
 
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
+		<!--<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">-->
+		<link href="//fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i|Roboto:300,400,400i,500,500i,700,700i" rel="stylesheet" type="text/css">
 
 		<!-- Favicons -->
-		<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-		<link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
+		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+		<link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="/img/apple-touch-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="/img/apple-touch-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon-180x180.png">
 		<link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
+		<link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96">
+		<link rel="icon" type="image/png" href="/img/android-chrome-192x192.png" sizes="192x192">
+		<meta name="msapplication-square70x70logo" content="/img/smalltile.png" />
+		<meta name="msapplication-square150x150logo" content="/img/mediumtile.png" />
+		<meta name="msapplication-wide310x150logo" content="/img/widetile.png" />
+		<meta name="msapplication-square310x310logo" content="/img/largetile.png" />
 		<link rel="manifest" href="/manifest.json">
-		<link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#ff4400">
 		<meta name="theme-color" content="#fff">
 
 		<!-- Open Graph -->
 		<meta property="og:type" content="business.business">
-		<meta property="og:title" content="Kaldi | Great coffee with a conscience">
+		<meta property="og:title" content="Thao Binh | Văn phòng bất động sản">
 		<meta property="og:url" content="/">
 		<meta property="og:image" content="/img/og-image.jpg">
 
