--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,19 +1,42 @@
-<nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center bg-white divider-grey relative">
+<nav class="overflow-x-hidden flex justify-between items-center center bg-white divider-grey relative">
+    <!-- Logo -->
+    <a href="/" class="pa3 db mr4 h-100 flex-none no-underline">
+		<span>
+			<span class="fw7" style="">Thao</span>
+			<span class="fw7" style="margin-left: -4px">Binh</span>
+			<span class="fw1" style="">Land</span>
+		</span>
+    </a>
 
-	<!-- Logo -->
-	<a href="/" class="pa3 db mr4 h-100 w3 flex-none">
-		<img src="/img/logo.svg" alt="Kaldi logo" class="br0 db mb0 w-100"/>
-	</a>
-
-	<!-- Primary Nav -->
-	<ul class="flex b grey-3">
-		<li><a href="/products" class="pa3 no-underline db">Products</a></li>
-
-		<li><a href="/values" class="pa3 no-underline db">Values</a></li>
-
-		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>
-
-		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
-	</ul>
-
+    <!-- Primary Nav -->
+    <ul class="flex b grey-3">
+        <li class="v-mid mt3 dn di-ns di-m di-l">
+            <span class="mr1" style="">
+                Hotline:
+                <a class="link near-black hover-silver " style="color: red" href="tel:123456789" title="Call">123456789</a>
+            </span>
+            <a class="link near-black hover-silver dib v-mid mr1" href="viber://add?number=123456789" title="Viber">
+                <img src="/img/viber.png" width="25" height="25" alt="">
+            </a>
+            <a class="link near-black hover-silver dib v-mid mr1" href="https://zalo.me/123456789" title="Zalo">
+                <img src="/img/zalo.png" width="25" height="25" alt="">
+            </a>
+        </li>
+        <li><a href="/dat-nen" class="pa3 fw4 no-underline db">Nhà Đất</a></li>
+        <!--<li><a href="/tin-tuc" class="pa3 fw4 no-underline db">Tin tức</a></li>-->
+    </ul>
+</nav>
+<nav class="dn-ns dn-m dn-l">
+    <footer class="pt1 ph5-ns v-mid tc overflow-x-hidden">
+        <span class="" style="position: relative; top: -5px">
+            Hotline:
+            <a class="link near-black hover-silver dib h0 w3 mr4" style="color: red" href="tel:123456789" title="Call">123456789</a>
+        </span>
+        <a class="link near-black hover-silver dib h0 mr3" href="viber://add?number=123456789" title="Viber">
+            <img src="/img/viber.png" width="25" height="25" alt="">
+        </a>
+        <a class="link near-black hover-silver dib h0 mr3" href="https://zalo.me/123456789" title="Zalo">
+            <img src="/img/zalo.png" width="25" height="25"  alt="">
+        </a>
+    </footer>
 </nav>
