--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 	<head>
 
-		<title>{{ .Title }} | Thao Binh Land</title>
+		<title>{{ .Title }}</title>
 		<link rel="stylesheet" href="/css/main.css"/>
 		<link rel="stylesheet" href="/css/flickity.min.css"/>
 
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!--<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">-->
-		<link href="//fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i|Roboto:300,400,400i,500,500i,700,700i" rel="stylesheet" type="text/css">
+		<link href="//fonts.googleapis.com/css?family=Roboto:300,400,400i,500,500i,700,700i" rel="stylesheet" type="text/css">
 
 		<!-- Favicons -->
 		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
@@ -37,7 +37,7 @@
 
 		<!-- Open Graph -->
 		<meta property="og:type" content="business.business">
-		<meta property="og:title" content="Thao Binh | Văn phòng bất động sản">
+		<meta property="og:title" content="{{ .Title }}">
 		<meta property="og:url" content="/">
 		<meta property="og:image" content="/img/og-image.jpg">
 
