--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -5,21 +5,33 @@
 				<div class="fl w-100 w-50-ns pa2">
 					<h3 class="f4 fw1 b lh-title mb1 primary">Liên hệ</h3>
 					<ul class="mb3">
-						<li><span class="fw1">Địa chỉ:</span> 12 Tân Trào, P. Tân Phú, Quận 7, Tp. Hồ Chí Minh</li>
-						<li><span class="fw1">Sdt:</span> <span style="color: red">123456789</span></li>
-						<li><span class="fw1">Email:</span> thaobinh@email.com</li>
-						<li><span class="fw1">Website:</span> thaobinhland.vn</li>
+						{{ if isset .Site.Data.info "address" }}
+						<li><span class="fw1">Địa chỉ:</span> {{.Site.Data.info.address}}</li>
+						{{ end }}
+
+						{{ if isset .Site.Data.info "phone" }}
+						<li><span class="fw1">Sdt:</span> <a href="tel:{{.Site.Data.info.phone}}" style="color: red">{{.Site.Data.info.phone}}</a></li>
+						{{ end }}
+
+						{{ if isset .Site.Data.info "email" }}
+						<li><span class="fw1">Email:</span> <a href="mailto:{{.Site.Data.info.email}}">{{.Site.Data.info.email}}</a></li>
+						{{ end }}
+
+						{{ if isset .Site.Data.info "website" }}
+						<li><span class="fw1">Website:</span> <a href="https://{{.Site.Data.info.website}}">{{ .Site.Data.info.website }}</a></li>
+						{{ end }}
 					</ul>
 				</div>
+
+				{{ if isset .Site.Data.info "mapUrl" }}
 				<div class="fl w-100 w-50-ns pa2">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1959.4698311001562!2d106.77774597964026!3d10.815929567275754!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1514061126352" width="100%" height="300px" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe src="{{.Site.Data.info.mapUrl}}" width="100%" height="300px" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
+				{{ end }}
 			</div>
 		</div>
 	</div>
 </footer>
-
-{{ partial "svg" . }}
 
 <script src="/app.js"></script>
 
